--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -35,7 +35,8 @@
   'pages/about',
   'pages/home',
   'pages/services',
-  'pages/contact';
+  'pages/contact',
+  'pages/testimonials';
 
 // 7. Themes
 @import
