--- a/static/scss/pages/_about.scss
+++ b/static/scss/pages/_about.scss
@@ -1060,6 +1060,7 @@
 .services-cta{
     position: relative;
     height: 35em;
+    margin: 4em 0 0 0;
     @media #{$breakpoint-md} {
         height: 20em;
     }
