--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6950,54 +6950,217 @@ footer {
   }
 }
 
+.testimonials-section {
+  margin: 3em 0;
+}
+
 .testimonial-item {
   position: relative;
-  width: 80%;
+  width: 90%;
   margin: auto;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .testimonial-item {
+    width: 80%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .testimonial-item {
+    width: 75%;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .testimonial-item {
+    width: 70%;
+  }
 }
 
 .testimonial-author {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto auto;
-      grid-template-columns: auto auto;
   -webkit-box-align: baseline;
   -ms-flex-align: baseline;
       align-items: baseline;
+  margin: auto;
+  width: 90%;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .testimonial-author {
+    width: 90%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .testimonial-author {
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .testimonial-author {
+    width: 75%;
+  }
 }
 
 .testimonial-author-name {
-  font-size: 2.5em;
-  text-align: center;
+  font-size: 4em;
+  width: 100%;
+  text-align: left;
+  letter-spacing: .1em;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .testimonial-author-name {
+    font-size: 3em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .testimonial-author-name {
+    font-size: 2.8em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .testimonial-author-name {
+    font-size: 2.8em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .testimonial-author-name {
+    font-size: 2.5em;
+    text-align: right;
+  }
 }
 
 .testimonial-author-job {
-  font-size: 0.9em;
+  font-size: 1.2em;
   color: grey;
   letter-spacing: 0.1em;
 }
 
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .testimonial-author-job {
+    font-size: 1.1em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .testimonial-author-job {
+    font-size: 1em;
+    margin-left: .5em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .testimonial-author-job {
+    font-size: .9em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .testimonial-author-job {
+    font-size: .9em;
+    margin-left: .5em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .testimonial-author-job {
+    font-size: 0.7em;
+    color: grey;
+    letter-spacing: 0.1em;
+  }
+}
+
 .testimonial-exert {
-  width: 80%;
+  width: 90%;
   color: #aa9659;
-  text-align: left;
-  margin: auto;
-  border-left: solid 1px black;
+  text-align: center;
+  margin: 2em auto;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .testimonial-exert {
+    width: 80%;
+    margin: 1em auto;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .testimonial-exert {
+    width: 70%;
+    margin: 1em auto;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .testimonial-exert {
+    width: 60%;
+  }
 }
 
 .testimonial-exert p {
-  margin-left: 1em;
-  font-size: .9em;
+  font-size: 1.5em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .testimonial-exert p {
+    font-size: 1.4em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .testimonial-exert p {
+    font-size: 1.1em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .testimonial-exert p {
+    font-size: 1.1em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .testimonial-exert p {
+    font-size: .9em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .testimonial-exert p {
+    font-size: .8em;
+  }
 }
 
 .testimonial-main {
-  width: 80%;
+  width: 90%;
   text-align: left;
   margin: auto;
+}
+
+@media only screen and (min-width: 1600px) {
+  .testimonial-main {
+    width: 65%;
+  }
 }
 
 .half-width-hr {
   width: 50%;
   margin: 2em auto;
+}
+
+@media only screen and (min-width: 1600px) {
+  .half-width-hr {
+    width: 50%;
+    margin: 2em auto;
+  }
 }
 /*# sourceMappingURL=main.css.map */
