--- a/static/scss/pages/_testimonials.scss
+++ b/static/scss/pages/_testimonials.scss
@@ -146,3 +146,42 @@
         margin: 2em auto;
     }
   }
+
+// ---------------------------------------------------------------
+// Tick list section
+// ---------------------------------------------------------------
+
+.tick-list-img{
+    width: 100%;
+    height: 30em;
+    img{
+        height: 100%;
+        object-fit: cover;
+        width: 100%;
+    }
+}
+
+.tick-list-title{
+    width: 90%;
+    margin: auto;
+}
+
+.tick-list-content{
+    margin: 2em auto;
+}
+
+.tick-item{
+    display: grid;
+    grid-template-columns: auto auto;
+    width: 90%;
+    margin: 2em auto;
+}
+
+.tick{
+    font-size: 2em;
+    align-self: center;
+}
+
+.tick-text{
+    margin-left: .9em;
+}
