--- a/static/scss/components/_button.scss
+++ b/static/scss/components/_button.scss
@@ -132,3 +132,9 @@
         padding: .6em .6em;
     }
 }
+
+.btn-black{
+    background: black;
+    color: white;
+    text-transform: uppercase;
+}
