--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2850,6 +2850,20 @@ footer {
   }
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-cta-content {
+    width: 45%;
+    margin: 2em auto 0 auto;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-cta-content {
+    width: 25%;
+    margin: 2em auto 0 auto;
+  }
+}
+
 .quiz-content-title {
   font-weight: 400;
   font-size: 1.3em;
@@ -2858,6 +2872,18 @@ footer {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .quiz-content-title {
     font-size: .9em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-content-title {
+    font-size: .8em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-content-title {
+    font-size: .6em;
   }
 }
 
@@ -2870,6 +2896,18 @@ footer {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .quiz-font {
     font-size: 5.5em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-font {
+    font-size: 4.5em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-font {
+    font-size: 3.5em;
   }
 }
 
@@ -2890,6 +2928,20 @@ footer {
   }
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-cta-btn {
+    font-size: 1em;
+    padding: .4em 1.8em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-cta-btn {
+    font-size: .7em;
+    padding: .5em 1.8em;
+  }
+}
+
 .quiz-cta {
   margin: 4em auto;
 }
@@ -2897,6 +2949,18 @@ footer {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .quiz-cta {
     margin: 2em auto;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-cta {
+    margin: 2em auto;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-cta {
+    margin: 1em auto;
   }
 }
 
@@ -5600,6 +5664,20 @@ footer {
   }
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-cta-content {
+    width: 45%;
+    margin: 2em auto 0 auto;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-cta-content {
+    width: 25%;
+    margin: 2em auto 0 auto;
+  }
+}
+
 .quiz-content-title {
   font-weight: 400;
   font-size: 1.3em;
@@ -5608,6 +5686,18 @@ footer {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .quiz-content-title {
     font-size: .9em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-content-title {
+    font-size: .8em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-content-title {
+    font-size: .6em;
   }
 }
 
@@ -5620,6 +5710,18 @@ footer {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .quiz-font {
     font-size: 5.5em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-font {
+    font-size: 4.5em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-font {
+    font-size: 3.5em;
   }
 }
 
@@ -5640,6 +5742,20 @@ footer {
   }
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-cta-btn {
+    font-size: 1em;
+    padding: .4em 1.8em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-cta-btn {
+    font-size: .7em;
+    padding: .5em 1.8em;
+  }
+}
+
 .quiz-cta {
   margin: 4em auto;
 }
@@ -5647,6 +5763,18 @@ footer {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .quiz-cta {
     margin: 2em auto;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .quiz-cta {
+    margin: 2em auto;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .quiz-cta {
+    margin: 1em auto;
   }
 }
 
