--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -761,6 +761,14 @@
         width: 60%;
         margin: 3em auto 0 auto;
     }
+    @media #{$breakpoint-lg}{
+        width: 45%;
+        margin: 2em auto 0 auto;
+    }
+    @media #{$breakpoint-xl}{
+        width: 25%;
+        margin: 2em auto 0 auto;
+    }
 }
 
 .quiz-content-title{
@@ -768,6 +776,12 @@
     font-size: 1.3em;
     @media #{$breakpoint-md}{
         font-size: .9em;
+    }
+    @media #{$breakpoint-lg}{
+        font-size: .8em;
+    }
+    @media #{$breakpoint-xl}{
+        font-size: .6em;
     }
 }
 
@@ -777,6 +791,12 @@
     line-height: .6em;
     @media #{$breakpoint-md}{
         font-size: 5.5em;
+    }
+    @media #{$breakpoint-lg}{
+        font-size: 4.5em;
+    }
+    @media #{$breakpoint-xl}{
+        font-size: 3.5em;
     }
 }
 
@@ -792,11 +812,25 @@
         font-size: 1.1em;
         padding: .4em 1.8em;
     }
+    @media #{$breakpoint-lg}{
+        font-size: 1em;
+        padding: .4em 1.8em;
+    }
+    @media #{$breakpoint-xl}{
+        font-size: .7em;
+        padding: .5em 1.8em;
+    }
 }
 
 .quiz-cta{
     margin: 4em auto;
     @media #{$breakpoint-md}{
         margin: 2em auto;
+    }
+    @media #{$breakpoint-lg}{
+        margin: 2em auto;
+    }
+    @media #{$breakpoint-xl}{
+        margin: 1em auto;
     }
 }
