Add dummy quiz banner code
Placeholder

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -27,7 +27,8 @@
 // 5. Components
 @import
   'components/navbar',
-  'components/button';
+  'components/button',
+  'components/quiz_banner';
 
 // 6. Page-specific styles
 @import
